welcome.lessons.welcome.methods.args.MethodsArgs.scala.error
Program:3: error: type mismatch;
 found   : Unit
 required: Int
if (sa==true) 
^